Add a new profile for Java 17 builds